--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,7 @@
 {
-  "tasks": {
-    "dev": "deno run --watch --allow-read --allow-net main.ts"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+  "tasks": {},
+  "imports": {},
+  "compilerOptions": {
+    "lib": ["deno.ns", "deno.unstable"]
   }
 }
